# CurveBuilder

./: .gitignore  LICENSE.txt  pyproject.toml
CurveBuilder/: __init__.py  ir_data_curve.py  rate_settings.py
example/: USDOIS_20240331.xlsx  demo.py  demo_EONIA.py  demo_SEK6M.py  demo_SOFR.py
